eks/workloads/person-db-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-db
spec:
  template:
    spec:
      containers:
      - name: postgres   
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: person-pvc
