eks/workloads/person-db-deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-db
  name: person-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-db
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: person-db
    spec:
      containers:
        - name: postgres
          image: docker.io/postgres:16
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pgdata
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: person-pvc
