eks/workloads/person-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-db
  name: person-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-db
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: person-db
    spec:
      containers:
        - name: postgres
          image: docker.io/postgres:16
          imagePullPolicy: IfNotPresent
