eks/workloads/person-service-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-service
  template:
    metadata:
      labels:
        app: person-service
    spec:
      containers:
        - image: quay.io/ksobkowiak/eks-wks-person-service:latest
          name: person-service
