eks/workloads/person-service-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-service
  template:
    metadata:
      labels:
        app: person-service
    spec:
      containers:
        - image: quay.io/ksobkowiak/eks-wks-person-service:latest
          name: person-service
          resources:
            limits:
              cpu: 200m
              memory: 10Mi
              #memory: 512Mi
            requests:
              cpu: 100m
              memory: 5Mi
              #memory: 256Mi
