eks/workloads/person-service-deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-service
  template:
    metadata:
      labels:
        app: person-service
    spec:
      containers:
        - image: quay.io/ksobkowiak/eks-wks-person-service:latest
          name: person-service
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /hello
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1    
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
