eks/workloads/person-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: person-db
  name: person-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: person-db
  type: ClusterIP
