eks/workloads/person-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: person-service
  name: person-service
spec:
  clusterIP: 172.20.86.21
  clusterIPs:
    - 172.20.86.21
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: person-service
  sessionAffinity: None
  type: ClusterIP
