eks/workloads/person-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: person-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: person-service
            port:
              number: 8080
        path: /hello
        pathType: Prefix
      - backend:
          service:
            name: person-service
            port:
              number: 8080
        path: /person
        pathType: Exact
